--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -53,33 +53,32 @@ jobs:
 
   check_env:
     name: Check env
+    outputs:
+      app_id: ${{ steps.check_env.outputs.app_id }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Output current branch name & date
+        # To use latest action, specify "release-master" instead of "v0.0.3"
+        uses: satackey/action-js-inline@v0.0.3
+        id: check_env
         with:
-          fetch-depth: 2
+          script: |
+            const core = require('@actions/core')
 
-      - name: Set dev app id
-        if: github.ref == 'refs/heads/develop'
-        id: app_id_develop
-        run: |
-          echo "This is a PR into the develop branch. Using dev-pezevents."
-          echo "app_id=dev-pezevents" >> $GITHUB_ENV
-
-      - name: Set stage app id
-        if: github.ref == 'refs/heads/staging'
-        id: app_id_stage
-        run: |
-          echo "This is a PR into the develop branch. Using stage-pezevents."
-          echo "app_id=stage-pezevents" >> $GITHUB_ENV
-
-      - name: Set prod app id
-        if: github.ref == 'refs/heads/main'
-        id: app_id_main
-        run: |
-          echo "This is a PR into the develop branch. Using pezevents."
-          echo "app_id=pezevents" >> $GITHUB_ENV
+            // branch
+            const ref = process.env.GITHUB_REF // refs/heads/main
+            const branch = ref.split('/').slice(-1)[0] // refs/heads/main → main
+            console.log(`branch: ${branch}`)
+            core.setOutput('branch', branch)
+            let appId = 'dev-pezevents'
+            if(branch == 'main') {
+              appId = 'pezevents'
+            } else if(branch == 'staging'){
+              appId = 'stage-pezevents'
+            } else if(branch == 'develop') {
+              appId = 'dev-pezevents'
+            }
+            core.setOutput('app_id', appId)
 
   print_prereqs:
     name: Print pre-requisite need outputs
@@ -89,7 +88,7 @@ jobs:
       - name: check_functions outputs
         run: echo "deploy_functions = ${{needs.check_functions.outputs.deploy_functions}}"
       - name: check_env outputs
-        run: echo "app_id = ${{env.app_id}}"
+        run: echo "app_id = ${{needs.check_env.outputs.app_id}}"
 
   # Deploy app to development
   # dev.sezzion.com
@@ -103,19 +102,19 @@ jobs:
           node-version: "13.x"
 
       - name: Build app dev
-        if: env.app_id == 'dev-pezevents'
+        if: needs.check_env.outputs.app_id == 'dev-pezevents'
         run: |
           npm ci
           npm run build
 
       - name: Build app dev
-        if: env.app_id == 'stage-pezevents'
+        if: needs.check_env.outputs.app_id == 'stage-pezevents'
         run: |
           npm ci
           npm run build:staging
 
       - name: Build app dev
-        if: env.app_id == 'pezevents'
+        if: needs.check_env.outputs.app_id == 'pezevents'
         run: |
           npm ci
           npm run build:prod
@@ -136,15 +135,15 @@ jobs:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
       - name: Deploy dev or stage
-        if: env.app_id == 'dev-pezevents' || env.app_id == 'stage-pezevents'
+        if: needs.check_env.outputs.app_id == 'dev-pezevents' || needs.check_env.outputs.app_id == 'stage-pezevents'
         uses: w9jds/firebase-action@master
         with:
-          args: deploy -P ${{env.app_id}} --only hosting:${{env.app_id}}
+          args: deploy -P ${{needs.check_env.outputs.app_id}} --only hosting:${{needs.check_env.outputs.app_id}}
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
 
       - name: Deploy prod
-        if: env.app_id == 'pezevents'
+        if: needs.check_env.outputs.app_id == 'pezevents'
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
