--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "ng build",
     "build:staging": "ng build -c=staging",
     "build:prod": "ng build --prod",
+    "build-pezevents-lib": "ng build --prod --project pezevents-lib",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
