--- a/.github/workflows/lib-deploy.yml
+++ b/.github/workflows/lib-deploy.yml
@@ -1,7 +1,7 @@
 name: Publish pezevents-lib
-on: 
-  push:
-    branches: [develop]
+on: push
+  branches: 
+    - develop
 jobs:
   # Check filechanges for functions deployment
   check_lib_files:
@@ -38,7 +38,9 @@ jobs:
   build_and_publish_pezevents_lib:
     
     runs-on: ubuntu-latest
-    
+    needs: [check_lib_files]
+    if: needs.check_lib_files.outputs.lib_changed == 'true'
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
