--- a/.github/workflows/lib-deploy.yml
+++ b/.github/workflows/lib-deploy.yml
@@ -1,7 +1,8 @@
 name: Publish pezevents-lib
-on: push
-  branches: 
-    - develop
+on: 
+  push:
+    branches: 
+      - develop
 jobs:
   # Check filechanges for functions deployment
   check_lib_files:
