--- a/.github/workflows/lib-deploy.yml
+++ b/.github/workflows/lib-deploy.yml
@@ -19,6 +19,7 @@ jobs:
       - name: check modified files
         id: check_files
         run: |
+          echo "::set-output name=lib_changed::false"
           echo "=============== list modified files ==============="
           git diff --name-only HEAD^ HEAD
 
@@ -27,12 +28,10 @@ jobs:
           while IFS= read -r file
           do
             echo $file
-            if [[ $file != projects/pezevents-lib/* ]]; then
-              echo "This modified file is not under the 'functions' folder."
-              echo "::set-output name=lib_changed::false"
-              break
-            else
+            if [[ $file == projects/pezevents-lib/* ]]; then
+              echo "This modified file is not under the 'projects/pezevents-lib' folder."
               echo "::set-output name=lib_changed::true"
+              break
             fi
           done < files.txt
 
