--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -80,15 +80,76 @@ jobs:
             }
             core.setOutput('app_id', appId)
 
-  print_prereqs:
-    name: Print pre-requisite need outputs
-    needs: [check_functions, check_env]
+  # Check filechanges for functions deployment
+  check_lib_files:
+    name: Check pezevents-lib files
+    outputs:
+      lib_changed: ${{ steps.check_files.outputs.lib_changed }}
     runs-on: ubuntu-latest
     steps:
-      - name: check_functions outputs
-        run: echo "deploy_functions = ${{needs.check_functions.outputs.deploy_functions}}"
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
+      - name: check modified files
+        id: check_files
+        run: |
+          echo "::set-output name=lib_changed::false"
+          echo "=============== list modified files ==============="
+          git diff --name-only HEAD^ HEAD
+
+          echo "========== check paths of modified files =========="
+          git diff --name-only HEAD^ HEAD > files.txt
+          while IFS= read -r file
+          do
+            echo $file
+            if [[ $file == projects/pezevents-lib/* ]]; then
+              echo "This modified file is under the 'projects/pezevents-lib' folder."
+              echo "::set-output name=lib_changed::true"
+              break
+            fi
+          done < files.txt
+
+  print_prereqs:
+    name: Print pre-requisite need outputs
+    needs: [check_functions, check_env, check_lib_files]
+    runs-on: ubuntu-latest
+    steps:
       - name: check_env outputs
         run: echo "app_id = ${{needs.check_env.outputs.app_id}}"
+      - name: check_functions outputs
+        run: echo "deploy_functions = ${{needs.check_functions.outputs.deploy_functions}}"
+      - name: check_lib_files outputs
+        run: echo "lib_changed = ${{needs.check_lib_files.outputs.lib_changed}}"
+
+  build_and_publish_pezevents_lib:
+    
+    runs-on: ubuntu-latest
+    needs: [check_lib_files]
+    if: needs.check_lib_files.outputs.lib_changed == 'true'
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup node
+      uses: actions/setup-node@master
+      with:
+        node-version: '13.x'
+
+    - name: Install environment
+      run: npm ci
+        
+    - name: Build pezevents-lib
+      run: npm run build-pezevents-lib
+      
+    - name: Publish if version has been updated
+      uses: JS-DevTools/npm-publish@v1
+      with:
+        token: ${{ secrets.NPM_AUTH_TOKEN }}
+        check-version: true
+        package: ./dist/pezevents-lib/package.json
 
   # Deploy app to development
   # dev.sezzion.com
