--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -57,7 +57,7 @@ jobs:
 
   develop_pr_preview:
     runs-on: ubuntu-latest
-    if: github.base_ref == 'develop'
+    if: github.head_ref == 'develop'
     
     steps:
     # Checkout and setup node
@@ -81,7 +81,7 @@ jobs:
 
   staging_pr_preview:
     runs-on: ubuntu-latest
-    if: github.base_ref == 'staging'
+    if: github.head_ref == 'staging'
     
     steps:
     # Checkout and setup node
@@ -106,7 +106,7 @@ jobs:
 
   main_pr_preview:
     runs-on: ubuntu-latest
-    if: github.base_ref == 'main'
+    if: github.head_ref == 'main'
     
     steps:
     # Checkout and setup node
