--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -2,50 +2,16 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy previews for PRs to main/staging/develop
-'on': pull_request
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+  # push:
+  #   branches:
+  #     - 'dev-preview/**'
+  #     - 'staging-preview/**'
+  #     - 'prod-preview/**'
 
 jobs:
-  # prod_preview:
-  #   runs-on: ubuntu-latest
-  #   if: github.ref != 'refs/heads/main'
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: npm ci && npm run build --prod
-  #     - uses: FirebaseExtended/action-hosting-deploy@v0
-  #       with:
-  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
-  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
-  #         projectId: pezevents
-  #       env:
-  #         FIREBASE_CLI_PREVIEWS: hostingchannels
-  # dev_preview:
-  #   runs-on: ubuntu-latest
-  #   if: github.ref != 'refs/heads/develop'
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: npm ci && npm run build
-  #     - uses: FirebaseExtended/action-hosting-deploy@v0
-  #       with:
-  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
-  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
-  #         projectId: dev-pezevents
-  #         target: dev-pezevents
-  #       env:
-  #         FIREBASE_CLI_PREVIEWS: hostingchannels
-  # stage_preview:
-  #   runs-on: ubuntu-latest
-  #   if: github.ref != 'refs/heads/staging'
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - run: npm ci && npm run build
-  #     - uses: FirebaseExtended/action-hosting-deploy@v0
-  #       with:
-  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
-  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGE_PEZEVENTS }}'
-  #         projectId: stage-pezevents
-  #         target: stage-pezevents
-  #       env:
-  #         FIREBASE_CLI_PREVIEWS: hostingchannels
 
   print_github_context:
     runs-on: ubuntu-latest
@@ -127,3 +93,44 @@ jobs:
         args: hosting:channel:deploy -P pezevents --only pezevents  ${{github.run_id}}-${{github.run_number}}
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_CI_TOKEN }}
+  # prod_preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref != 'refs/heads/main'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build --prod
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PEZEVENTS }}'
+  #         projectId: pezevents
+  #       env:
+  #         FIREBASE_CLI_PREVIEWS: hostingchannels
+  # dev_preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref != 'refs/heads/develop'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEV_PEZEVENTS }}'
+  #         projectId: dev-pezevents
+  #         target: dev-pezevents
+  #       env:
+  #         FIREBASE_CLI_PREVIEWS: hostingchannels
+  # stage_preview:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref != 'refs/heads/staging'
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - run: npm ci && npm run build
+  #     - uses: FirebaseExtended/action-hosting-deploy@v0
+  #       with:
+  #         repoToken: '${{ secrets.GITHUB_TOKEN }}'
+  #         firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_STAGE_PEZEVENTS }}'
+  #         projectId: stage-pezevents
+  #         target: stage-pezevents
+  #       env:
+  #         FIREBASE_CLI_PREVIEWS: hostingchannels
