--- a/.github/workflows/firebase-deployments.yml
+++ b/.github/workflows/firebase-deployments.yml
@@ -155,12 +155,15 @@ jobs:
   # dev.sezzion.com
   deploy:
     runs-on: ubuntu-latest
-    needs: [check_functions, check_env]
+    needs: [check_functions, check_env, build_and_publish_pezevents_lib]
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup node
+        uses: actions/setup-node@master
         with:
-          node-version: "13.x"
+          node-version: '13.x'
 
       - name: Build app dev
         if: needs.check_env.outputs.app_id == 'dev-pezevents'
