--- a/functions/package.json
+++ b/functions/package.json
@@ -13,7 +13,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "@pezetter/pezevents-lib": "0.0.1",
+    "@pezetter/pezevents-lib": "^0.0.11",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
