--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@angular/service-worker": "^11.1.1",
+    "@fullcalendar/angular": "^5.5.0",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
     "@ngrx/component-store": "^10.1.2",
     "@ngrx/effects": "^10.1.2",
     "@ngrx/entity": "^10.1.2",
