--- a/.github/workflows/firebase-pr-preview-deployments.yml
+++ b/.github/workflows/firebase-pr-preview-deployments.yml
@@ -24,7 +24,7 @@ jobs:
 
   develop_pr_preview:
     runs-on: ubuntu-latest
-    if: github.head_ref == 'develop'
+    if: github.base_ref == 'develop'
     
     steps:
     # Checkout and setup node
@@ -49,7 +49,7 @@ jobs:
 
   staging_pr_preview:
     runs-on: ubuntu-latest
-    if: github.head_ref == 'staging'
+    if: github.base_ref == 'staging'
     
     steps:
     # Checkout and setup node
@@ -74,7 +74,7 @@ jobs:
 
   main_pr_preview:
     runs-on: ubuntu-latest
-    if: github.head_ref == 'main'
+    if: github.base_ref == 'main'
     
     steps:
     # Checkout and setup node
