--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # dependencies
 /node_modules
 */node_modules
+projects/pezevents-lib/node_modules
 
 # profiling files
 chrome-profiler-events*.json
