--- a/projects/pezevents-lib/package.json
+++ b/projects/pezevents-lib/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@pezetter/pezevents-lib",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "peerDependencies": {
     "@angular/common": "^11.1.1",
-    "@angular/core": "^11.1.1"
+    "@angular/core": "^11.1.1",
+    "@angular/fire": "^6.1.4"
   },
   "dependencies": {
     "tslib": "^2.0.0"
