--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.1",
-    "@angular/cdk": "^11.1.1",
-    "@angular/common": "~11.1.1",
-    "@angular/compiler": "~11.1.1",
-    "@angular/core": "~11.1.1",
+    "@angular/animations": "^11.1.2",
+    "@angular/cdk": "^11.2.2",
+    "@angular/common": "^11.1.2",
+    "@angular/compiler": "^11.1.2",
+    "@angular/core": "^11.1.2",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "~11.1.1",
-    "@angular/material": "^11.1.1",
-    "@angular/platform-browser": "~11.1.1",
-    "@angular/platform-browser-dynamic": "~11.1.1",
-    "@angular/router": "~11.1.1",
-    "@angular/service-worker": "^11.1.1",
+    "@angular/forms": "^11.1.2",
+    "@angular/material": "^11.2.2",
+    "@angular/platform-browser": "^11.1.2",
+    "@angular/platform-browser-dynamic": "^11.1.2",
+    "@angular/router": "^11.1.2",
+    "@angular/service-worker": "^11.2.3",
     "@fullcalendar/angular": "^5.5.0",
     "@fullcalendar/daygrid": "^5.5.0",
     "@fullcalendar/interaction": "^5.5.0",
@@ -39,24 +39,29 @@
     "@ngrx/entity": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
-    "@pezetter/pezevents-lib": "^0.0.3",
+    "@pezetter/pezevents-lib": "^0.0.12",
     "angular-calendar": "^0.28.22",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.17.0",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^8.2.9",
     "jquery": "^3.5.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.6",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.2",
-    "@angular/cli": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.1",
+    "@angular-devkit/architect": "^0.1102.2",
+    "@angular-devkit/build-angular": "^0.1101.4",
+    "@angular/cli": "^11.1.4",
+    "@angular/compiler-cli": "^11.1.2",
     "@ngrx/schematics": "^10.1.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "^3.6.4",
+    "@types/node": "^12.20.4",
     "codelyzer": "^6.0.0",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
@@ -64,16 +69,11 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.2.4",
+    "open": "^7.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2",
-    "@angular-devkit/architect": ">= 0.900 < 0.1200",
-    "ng-packagr": "^11.0.0",
-    "firebase-tools": "^8.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3"
+    "typescript": "^4.1.5"
   }
 }
